unit test, addmeeting activity