@@ -1,41 +1,41 @@
 package com.kardabel.mareu.data;
 
+import android.os.Build;
+
+import androidx.annotation.RequiresApi;
+
 import com.kardabel.mareu.model.Email;
 import com.kardabel.mareu.model.Meeting;
 import com.kardabel.mareu.model.Room;
 
+import java.time.LocalDate;
+import java.time.LocalTime;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 /**
  * Created by stéphane Warin OCR on 31/03/2021.
  */
+
 public class FakeDataStore {
 
-    public static List<Meeting> Fake_Meetings = List.of(
-            new Meeting(
-                0,
-                "Reuninon A",
-                Room.ROOM_MARIO,
-                "11h20",
-                "12-05-2021",
-                Room.ROOM_MARIO,
-                List.of(
-                    new Email("Stéphane", "stephane@monmail.fr"),
-                    new Email("Nino", "nino@monmail.fr")
-                )
-            ),
-            new Meeting(1,"Reuninon B",Room.ROOM_PEACH, "08h20","13-05-2021", Room.ROOM_PEACH, List.of(
-                new Email("Stéphane", "stephane@monmail.fr"),
-                new Email("Nino", "nino@monmail.fr")
+    public static List<Meeting> Fake_Meetings = Arrays.asList(
+            new Meeting(0, "Reuninon A", Room.ROOM_MARIO, LocalTime.of(15, 10), LocalTime.of(16, 50), LocalDate.of(2021, 05, 12), Room.ROOM_MARIO, Arrays.asList(
+                    new Email("stephane@monmail.fr"),
+                    new Email("peteretsteven@monmail.fr")
             )),
-            new Meeting(2,"Reuninon c",Room.ROOM_GOOMBA, "15h30", "14-05-2021",Room.ROOM_GOOMBA, List.of(
-                new Email("Stéphane", "stephane@monmail.fr"),
-                new Email("Nino", "nino@monmail.fr")
+            new Meeting(1, "Reuninon B", Room.ROOM_PEACH, LocalTime.of(9, 00), LocalTime.of(11, 20), LocalDate.of(2021, 05, 01), Room.ROOM_PEACH, Arrays.asList(
+                    new Email("warin@monmail.fr"),
+                    new Email("peteretsteven@monmail.fr")
             )),
-            new Meeting(3,"Reuninon D",Room.ROOM_BOO, "13h00", "15-05-2021",Room.ROOM_BOO, List.of(
-                new Email("Stéphane", "stephane@monmail.fr"),
-                new Email("Nino", "nino@monmail.fr")
+            new Meeting(2, "Reuninon c", Room.ROOM_GOOMBA, LocalTime.of(11, 8), LocalTime.of(13,4), LocalDate.of(2021, 06, 15), Room.ROOM_GOOMBA, Arrays.asList(
+                    new Email("philibert@monmail.fr"),
+                    new Email("peteretsteven@monmail.fr")
+            )),
+            new Meeting(3, "Reuninon D", Room.ROOM_BOO, LocalTime.of(16, 50), LocalTime.of(18,00), LocalDate.of(2021, 10, 02), Room.ROOM_BOO, Arrays.asList(
+                    new Email("krabulbe@monmail.fr"),
+                    new Email("peteretsteven@monmail.fr")
             ))
 
     );
